Add Next.js admin panel and improve photo upload functionality
- Add complete Next.js admin panel with TypeScript support
- Implement photo upload component with slider management
- Add project, category, and photo management interfaces
- Enhance PhotosController with proper file handling
- Add FileService improvements for better photo processing
- Include FileName field in PhotoDto for UI compatibility
- Add comprehensive .gitignore for build artifacts
- Clean up old uploaded photo files

--- a/Mimarlik.API/appsettings.json
+++ b/Mimarlik.API/appsettings.json
@@ -4,7 +4,7 @@
   },
   "FileSettings": {
     "UploadsPath": "Uploads",
-    "BaseUrl": "https://localhost:5001"
+    "BaseUrl": "http://localhost:5187"
   },
   "Logging": {
     "LogLevel": {
